# VarTodd

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE
benchmarks/: CMakeLists.txt  best_first.cpp  fast_todd.cpp
cmake/: cnpyPatch.cmake  fbitsetPatch.cmake
data/: run.sh
data/baseline_npy/: gf2^10_mult_fr_1030-187.npy  gf2^3_mult_fr_310-27.npy  gf2^4_mult_fr_410-39.npy  gf2^4_mult_fr_43210-39.npy  gf2^5_mult_fr_53210-49.npy  gf2^5_mult_fr_54320-59.npy  gf2^6_mult_fr_610-79.npy  gf2^6_mult_fr_630-59.npy  gf2^7_mult_fr_730-107.npy  gf2^8_mult_fr_84310-129.npy
data/baseline_npy/gf_mult_Khoroshii_best/: gf2^10-159.npy  gf2^3-29.npy  gf2^4-41.npy  gf2^5-61.npy  gf2^6-77.npy  gf2^7-101.npy  gf2^8-123.npy  gf2^9-139.npy
data/baseline_npy/gf_mult_Vandaele_wo_aux/: gf2^7_730-109.npy  gf2^8_84310-129.npy  gf2^9_940-163.npy
data/init_npy/: 1731init-00173.npy  1731init167-00249.npy  barenco_tof_10.qc.matrix.npy  barenco_tof_3.qc.matrix.npy  barenco_tof_5.qc.matrix.npy  csla_mux_3.qc.matrix.npy  gf10.qc.matrix.npy  gf2^10_mult_1030.qc.matrix.npy  gf2^16_mult_1612310.qc.matrix.npy  gf2^32_mult.qc.matrix.npy  gf2^4_mult_410.qc.matrix.npy  gf2^4_mult_430.qc.matrix.npy  gf2^4_mult_43210.qc.matrix.npy  gf2^4_mult_fr_430.matrix.npy  gf2^4_mult_fr_43210.matrix.npy  gf2^5_mult_2024.qc.matrix.npy  gf2^5_mult_5210.qc.matrix.npy  gf2^5_mult_530.qc.matrix.npy  gf2^5_mult_fr_54320.matrix.npy  gf2^6_mult.qc.matrix.npy  gf2^6_mult_610.qc.matrix.npy  gf2^7_mult.qc.matrix.npy  gf2^7_mult_730.qc.matrix.npy  gf2^7_mult_fr_730.matrix.npy  gf2^8_mult_fr_84310.matrix.npy  gf2^9_mult.qc.matrix.npy  gf2^9_mult_940.qc.matrix.npy  gf2^9_mult_94310.qc.matrix.npy  gf5.npy  mod_adder_1024.qc.matrix.npy  mod_mult_55.qc.matrix.npy  mod_red_21.qc.matrix.npy  qcla_adder_10.qc.matrix.npy  qcla_com_7.qc.matrix.npy  qcla_mod_7.qc.matrix.npy  rc_adder_6.qc.matrix.npy
data/init_npy/gf_mult_Khoroshii_best/: gf2^10.npy  gf2^3.npy  gf2^4.npy  gf2^5.npy  gf2^6.npy  gf2^7.npy  gf2^8.npy  gf2^9.npy
data/init_npy/gf_mult_Vandaele_standart_wo_ancilla/: gf2^10_mult.qc.matrix.npy  gf2^16_mult.qc.matrix.npy  gf2^4_mult.qc.matrix.npy  gf2^5_mult.qc.matrix.npy  gf2^64_mult.qc.matrix.npy  gf2^8_mult.qc.matrix.npy
data/init_npy/gf_mult_Vandaele_w_ancilla/: gf2^11_mult_1120.qc.matrix.npy  gf2^5_mult_520.qc.matrix.npy  gf2^5_mult_53210.qc.matrix.npy  gf2^5_mult_54210.qc.matrix.npy  gf2^6_mult_2024.qc.matrix.npy  gf2^6_mult_630.qc.matrix.npy  gf2^7_mult_740.qc.matrix.npy  gf2^8_mult_84310.qc.matrix.npy
data/init_npy/gf_mult_Vandaele_wo_ancilla/: gf2^4_410.npy  gf2^5_530.npy  gf2^5_53210.npy  gf2^5_54210.npy  gf2^5_54310.npy  gf2^6_630.npy
data/init_npy/other/: adder_8.qc.matrix.npy  barenco_tof_4.qc.matrix.npy  csum_mux_9.qc.matrix.npy  ham15_mad.qc.matrix.npy  mod5_4.qc.matrix.npy
demos/: CMakeLists.txt  benchmark.cpp  best_first.cpp  fast_todd.cpp  vartodd.cpp
include/: algorithms.hpp  matrix.hpp  nullspace.hpp  random.hpp  todd_generator.hpp  todd_index.hpp  typedef.hpp
scripts/base_search/: full_pso.py
scripts/optimization_core/: format.py  helper.py  mcts_dao.py  node.py  run_standart.py  todd.py  validate.py
src/: CMakeLists.txt
src/core/: CMakeLists.txt  algorithms.cpp  matrix.cpp  nullspace.cpp  todd_generator.cpp  todd_index.cpp
src/python/: CMakeLists.txt  todd_wrapper.cpp
